tests/paczka1/fuzzy1/26692642.err
Error in line 8: Gjrd S793 8,5
Error in line 18: Gjrd A705 26,8
Error in line 26: IA8 A705 1,7
Error in line 27: IA8 S737 49,2
Error in line 30: 35Whc92RK A705 43,2
